[project]
name = "pyForceDAQ"
version = "2.0.6"
description = "A Python package for data acquisition and analysis in force-based experiments."
authors = [
    { name = "Oliver Lindemann", email = "lindemann@essb.eur.nl" },
]
requires-python = ">=3.12, <3.14"
dependencies = [
    "atiiaftt>=0.1.1",
    "expyriment>=1.0.1",
    "nidaqmx>=1.5.0",
    "numpy>=2.4.4",
    "psutil>=7.2.2",
    "pylsl>=1.18.2",
    "pysimplegui>=6.0",
    "tomlkit>=0.15.0",
]

[tool.uv.extra-build-dependencies]
    pygame = ["setuptools._distutils.msvccompiler"]

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.2.0",
    "ipython>=9.14.0",
    "ruff>=0.15.15",
]
pydaqmx = [
    "pydaqmx>=1.4.7",
]
test = [
    "pytest>=9.0.3",
]

[project.scripts]
pyforcedaq = "pyforcedaq.__main__:cli"

[tool.ruff.lint]
ignore = ["F401", "F405"]

[tool.ruff.format]
line-ending = "lf"
indent-style = "space"